# project-inference-router

./: .gitignore  DECISIONS.md  Makefile  README.md  SCOPE.md
deploy/systemd/: inference-router-janitor.service  inference-router-janitor.timer  inference-router-worker.service
docs/: architecture.md  concept.md  using-nats-mq.md  validation.md
router/: Cargo.toml  spin.toml
router/src/: lib.rs
scripts/: bootstrap-substrate.sh  janitor.sh  smoke.sh
worker/: Cargo.toml
worker/src/: main.rs
